[project]
name = "coin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "imageio>=2.37.2",
    "lpips>=0.1.4",
    "matplotlib>=3.10.7",
    "pytorch-msssim>=1.0.0",
    "scikit-image>=0.25.2",
    "torch>=1.7.1",
    "torchvision>=0.8.0",
    "tqdm>=4.67.1",
]
